# wcanvas

./: Cargo.toml  EDITING_DEPTH_ROADMAP.md  README.md  build_run_web.sh  index.html  todo.txt
.github/workflows/: release.yml
data/shaders/: draw_shader.wgsl  screen_text_shader.wgsl  text_shader.wgsl  ui_shader.wgsl  vector_sdf_shader.wgsl
src/: app.rs  app_state.rs  document.rs  drawing.rs  event_handler.rs  history.rs  lib.rs  main.rs  renderer.rs  rough.rs  shader.wgsl  state.rs  text_renderer.rs  ui.rs  update_logic.rs  vertex.rs
src/canvas/: canvas_transform.rs  mod.rs  uniform.rs
src/math/: mat4.rs  mod.rs  vec3.rs
src/platform/: linux.rs  macos.rs  mod.rs  wasm.rs
src/vector/: mod.rs  path.rs  sdf.rs  style.rs  tessellator.rs
tools/woff2-converter/: convert.go  convert.sh
