[package]
name = "wcanvas"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[dependencies]
cfg-if = "1"
winit = { version = "0.30.11", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
anyhow = "1.0"
ab_glyph = "0.2.29"
rand = "0.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2", features = ["NSOpenPanel", "NSSavePanel", "NSPanel", "NSResponder", "NSWindow"] }
objc2-foundation = { version = "0.2", features = ["NSThread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document", "Window", "Element", "HtmlCanvasElement", "EventTarget", "Event",
    "HtmlInputElement", "FileList", "File", "FileReader", "Blob", "Url",
    "HtmlAnchorElement", "BlobPropertyBag", "HtmlElement", "Storage",
] }
web-time = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
